# rtcrobot-ws

rtcrobot (another copy)/rtcrobot_actions/scripts/: mission_test.py
rtcrobot (another copy)/rtcrobot_dwb_critics/src/: path_dist_pruned.cpp
rtcrobot (another copy)/rtcrobot_fleetclient/: package.xml
rtcrobot (another copy)/rtcrobot_fleetclient/nodes/: turnonmapping.py
rtcrobot (another copy)/rtcrobot_fleetclient/scripts/: pub.py
rtcrobot (another copy)/rtcrobot_services/srv/: DockingState.srv
rtcrobot/rtcrobot/script/: 01-netcfg.yaml  99-ftdi.rules  battery.rules  create_udev_rules.sh  delete_udev_rules.sh  motordriver.rules  rtcboard.rules  sudomode.sh
rtcrobot/rtcrobot_actions/: CMakeLists.txt
rtcrobot/rtcrobot_actions/action/: Dock.action  Mission.action  UnDock.action
rtcrobot/rtcrobot_actions/launch/: mission.launch
rtcrobot/rtcrobot_actions/nodes/: missionclient_node.py  (+1 more)
rtcrobot/rtcrobot_autodock/: CMakeLists.txt
rtcrobot/rtcrobot_driver/: CMakeLists.txt
rtcrobot/rtcrobot_driver/cfg/: Light_.cfg  TFDiff.cfg
rtcrobot/rtcrobot_driver/nodes/: battery.py  client.py  config_light.py  diff_tf.py  motor_driver.py  robotboard.py  sound.py  switch_odom.py
rtcrobot/rtcrobot_driver/scripts/: SwitchLight_test.py
rtcrobot/rtcrobot_dwb_critics/: CMakeLists.txt  default_critics.xml
rtcrobot/rtcrobot_fleetclient/: CMakeLists.txt  setup.py
rtcrobot/rtcrobot_msgs/: CMakeLists.txt
rtcrobot/rtcrobot_navigation/: CMakeLists.txt  package.xml  setup.py
rtcrobot/rtcrobot_services/: CMakeLists.txt
rtcrobot/rtcrobot_webinterface/: CMakeLists.txt
(+136 files in other folders)
